# TinyTensor

./: .gitignore  CMakeLists.txt  README.md
examples/: 01_create_and_copy.cpp  02_aos_soa_transform.cpp  03_async_pipeline.cpp  04_stride_check.cpp
include/tinytensor/: aligned_alloc.hpp  status.hpp  tensor.hpp  thread_pool.hpp
src/: aligned_alloc.cpp  tensor.cpp  thread_pool.cpp
